Updated README, LICENSE and priority encoding

--- a/clustering_dna_storage/checksum.ipynb
+++ b/clustering_dna_storage/checksum.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,11 +45,8 @@
     }
    ],
    "source": [
-    "# Read cat.fasta - add encoding\n",
+    "# Read cat.fasta - add checksum encoding\n",
     "# write fasta\n",
-    "# badread\n",
-    "# do clustering get candidates\n",
-    "# decode without apriori\n",
     "\n",
     "RU10_path = \"/Users/i/Downloads/DNA_STorage/code/libjpeg/cat_FFDX.jpg_RU10.fasta\"\n",
     "checksum_path = os.path.join(os.path.dirname(RU10_path), \"cat_FFDX_checksum.fasta\")\n",
